# arabic-alphabet-lab

./: README.md  load_data.py  pyproject.toml
.github/workflows/: ci.yml
src/arabic_alphabet_lab/: __init__.py  diacritics.py  graphemes.py  letter.py
src/arabic_alphabet_lab.egg-info/: PKG-INFO  SOURCES.txt
src/arabic_alphabet_lab/data/: diacritics.json  letters.json
src/data/: diacritics.json  letters.json
tests/: test_graphemes.py  test_import.py  test_letter.py
