[build-system] 
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-alphabet-lab"
version = "0.1.0"
description = "Arabic alphabet as a programmable system: letters, diacritics, joining logic, and analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hussain Ather" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
arabic_alphabet_lab = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

